improve home address field : remove geoloc + fix overlapping clear icon (#638)

--- a/app/webpacker/stylesheets/components/_search_form.scss
+++ b/app/webpacker/stylesheets/components/_search_form.scss
@@ -15,4 +15,11 @@
   label {
     color: white;
   }
+
+  .ap-icon-clear {
+    right: 40px;
+  }
+  .ap-icon-pin {
+    display: none;
+  }
 }
